# orchids-swe-challenge-aced

./: .gitignore  ERROR_FIX.md  README.md  package-lock.json  package.json  vercel.json
backend/: env.txt  package-lock.json  package.json  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: __init__.py  config.py  logging.py
backend/app/models/: clone.py
backend/app/routers/: clone.py
backend/app/services/: asset_downloader.py  base_scraper.py  full_site_scraper.py  hyperbrowser_scraper.py  llm.py  llm_clients.py  playwright_scraper.py  scraper.py  site_crawler.py  vision_cloner.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: LiveLogView.tsx  sidebar-demo.tsx
frontend/src/components/ui/: placeholders-and-vanish-input-demo.tsx  sidebar.tsx  text-generate-effect.tsx
frontend/src/lib/: api.ts
